# ibm-quantum-schemas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
assets/: release.sh  verify_headers.py
changelog.d/: 124.added.rst  125.added.rst  137.added.rst  143.added.rst  xxx.changed.rst
docs/: .conf.py.swp  Makefile  conf.py  index.rst
docs/_templates/autosummary/: class.rst
docs/apidocs/: estimator_0_1.rst  executor_2_0.rst  executor_2_0_dev.rst  index.rst  noise_learner_v2_0_1.rst  noise_learner_v3_0_3.rst  sampler_0_1.rst
ibm_quantum_schemas/: __init__.py  aliases.py
ibm_quantum_schemas/common/: __init__.py  annotation_serializer.py  base64_reader.py  datetime_wrapper.py  ndarray_wrapper.py  qasm.py  qpy.py  samplex.py  tensor.py  typed_qpy_circuit.py
ibm_quantum_schemas/common/version_0_1/: __init__.py  qpy.py
ibm_quantum_schemas/estimator/version_0_1/: __init__.py  data_bin.py  dynamical_decoupling_metadata.py  dynamical_decoupling_options.py  estimator_pub.py  execution_options.py  layer_noise_learning_options.py  layer_noise_metadata.py  layer_noise_model.py  layer_noise_model_metadata.py  measure_noise_learning_options.py  noise_learner_results.py  observables_array.py  options.py  params.py  pec_options.py  primitive_result.py  primitive_result_resilience_metadata.py  primitive_result_zne_metadata.py  pub_result.py  pub_result_resilience_metadata.py  pub_result_zne_metadata.py  resilience_options.py  simulator_options.py  twirling_metadata.py  twirling_options.py  zne_options.py
ibm_quantum_schemas/estimator/version_0_1_dev/: __init__.py  data_bin.py  dynamical_decoupling_metadata.py  estimator_pub.py  execution_options.py  layer_noise_learning_options.py  layer_noise_model.py  layer_noise_model_metadata.py  noise_learner_results.py  observables_array.py  options.py  params.py  pec_metadata.py  pec_options.py  primitive_result_resilience_metadata.py  primitive_result_zne_metadata.py  pub_result.py  pub_result_resilience_metadata.py  resilience_options.py  simulator_options.py  zne_options.py
ibm_quantum_schemas/executor/: __init__.py
ibm_quantum_schemas/executor/version_0_1/: __init__.py  models.py
ibm_quantum_schemas/executor/version_0_2/: __init__.py  models.py
ibm_quantum_schemas/executor/version_1_0/: __init__.py  models.py
ibm_quantum_schemas/executor/version_1_0_dev/: __init__.py  models.py
ibm_quantum_schemas/executor/version_1_1/: __init__.py  models.py
ibm_quantum_schemas/executor/version_1_1_dev/: __init__.py  models.py
ibm_quantum_schemas/executor/version_2_0/: __init__.py
ibm_quantum_schemas/executor/version_2_0_dev/: __init__.py  models.py
ibm_quantum_schemas/models/: __init__.py  annotation_serializer.py  base_params_model.py  execution_span_model.py  execution_spans.py  ndarray_wrapper_model.py  pauli_lindblad_map_model.py  qpy_model.py  qubit_sparse_pauli_list_model.py  samplex_model.py  tensor_model.py  typed_qpy_circuit_model.py
ibm_quantum_schemas/models/estimator/: __init__.py
ibm_quantum_schemas/models/executor/: __init__.py
ibm_quantum_schemas/models/noise_learner_v2/: __init__.py
ibm_quantum_schemas/models/noise_learner_v3/: __init__.py
ibm_quantum_schemas/models/qpy_model/: __init__.py  qpy_model.py  qpy_model_v13to16.py  qpy_model_v13to17.py
ibm_quantum_schemas/models/sampler_v2/: __init__.py
ibm_quantum_schemas/sampler/: __init__.py
models/: __init__.py
schemas/: backend_configuration_schema.json  backend_properties_schema.json  backend_status_schema.json  default_pulse_configuration_schema.json  estimator_result_v2_schema.json  estimator_v2_schema.json  ibmq_device_qobj_schema.json  ibmq_simulator_qobj_schema.json  job_status_schema.json  qobj_schema.json  result_schema.json  sampler_result_v2_schema.json  sampler_v2_schema.json
schemas/examples/: backend_configuration_openpulse_example.json  backend_configuration_openqasm_example.json  backend_configuration_openqasm_simulator_example.json  qasm_w_pulse_gates.json  qobj_openpulse_example.json  qobj_openqasm_example.json
test/: __init__.py  conftest.py
test/common/: __init__.py  test_annotation_serializer.py  test_base64_reader.py  test_ndarray_wrapper.py  test_qasm.py  test_qpy.py  test_samplex.py  test_tensor.py
test/estimator/: __init__.py
test/models/: __init__.py  conftest.py  test_annotation_serializer.py  test_execution_span_model.py  test_execution_spans.py  test_ndarray_wrapper.py  test_ndarray_wrapper_model.py  test_pauli_lindblad_map.py  test_pauli_lindblad_map_model.py  test_qpy_model.py  test_qubit_sparse_pauli_list_model.py  test_samplex_model.py  test_tensor.py  test_tensor_model.py  test_typed_qpy_circuit.py  test_typed_qpy_circuit_model.py  utils.py
test/noise_learner_v3/: __init__.py
test/sampler_v2/: __init__.py
tests/: __init__.py  test_primitive_output_schemas.py  test_primitive_result_schemas.py  test_primitive_schemas.py  test_schema_load.py  test_schema_with_examples.py
(+359 files in other folders)
